--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,4 @@
 run:
-  deadline: 5m
   issues-exit-code: 1
 
 linters:
@@ -12,7 +11,6 @@ linters:
     - typecheck
     - unused
     - bodyclose
-    - depguard
     - dogsled
     - dupl
     - gochecknoinits
@@ -32,14 +30,11 @@ linters:
     - goconst
     - asciicheck
     - nestif
-    - exportloopref
+    - copyloopvar
     - sqlclosecheck
     - revive
-    - exportloopref
 
 linters-settings:
-  govet:
-    check-shadowing: true
   goimports:
     local-prefixes: gostore
   gocritic:
