gostore refactored: cli part is divided into packages, introduced command categories; from app removed service/service and CommonParams, now store overriding comes from container, introduced service that responsible for store initializing and cloning

--- a/ws/justfile
+++ b/ws/justfile
@@ -14,5 +14,5 @@ _init $GOSTORE_STORE_BASE_PATH=gostoreBasePath:
     fi
 
     mkdir -p {{gostoreBasePath}}
-    gostore init --id main
+    gostore store init --id main
 
