--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,8 +21,8 @@ builds:
       - arm64
     ldflags:
       - -s -w
-      - -X main.version={{.Version}}
-      - -X main.commit={{.Commit}}
+      - -X github.com/UsingCoding/gostore/internal/cli/cmd/app.Version={{.RawVersion}}
+      - -X github.com/UsingCoding/gostore/internal/cli/cmd/app.Commit={{.Commit}}
 
 archives:
   - format: tar.gz
@@ -51,7 +51,7 @@ changelog:
       - '^docs:'
       - '^test:'
       - '^ci:'
-      - '^chore:'
+      - '^version-increment:'
 
 release:
   github:
