feat: upgrade to go 1.25, new linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,46 +1,59 @@
+version: "2"
 run:
   issues-exit-code: 1
-
 linters:
   enable:
-    - errcheck
-    - gosimple
-    - govet
-    - ineffassign
-    - staticcheck
-    - typecheck
-    - unused
+    - asciicheck
     - bodyclose
     - dogsled
     - dupl
     - gochecknoinits
     - gocognit
+    - goconst
     - gocritic
     - gocyclo
-    - gofmt
-    - goimports
     - gosec
+    - importas
     - misspell
     - nakedret
+    - nestif
     - prealloc
-    - stylecheck
+    - revive
+    - rowserrcheck
+    - sqlclosecheck
+    - staticcheck
     - unconvert
     - whitespace
-    - rowserrcheck
-    - goconst
-    - asciicheck
-    - nestif
-    - copyloopvar
-    - sqlclosecheck
-    - revive
-
-linters-settings:
-  goimports:
-    local-prefixes: gostore
-  gocritic:
-    disabled-checks:
-      - sloppyReassign
-      - whyNoLint
-    enabled-tags:
-      - experimental
-      - opinionated
+  settings:
+    gocritic:
+      disabled-checks:
+        - sloppyReassign
+        - whyNoLint
+      enabled-tags:
+        - experimental
+        - opinionated
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  settings:
+    goimports:
+      local-prefixes:
+        - github.com/UsingCoding/gostore
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
