--- a/mise.toml
+++ b/mise.toml
@@ -26,7 +26,7 @@ depends = [ "test:*" ]
 
 [tasks."test:go-test"]
 # exclude tests from ./cmd/tests
-run = "go test $(go list ./... | rg -v '/cmd/tests')"
+run = "go test $(go list ./... | grep -v '/cmd/tests')"
 
 [tasks."test:lint"]
 run = "golangci-lint run"
